graphchan_frontend/check_frontend_error_final_2.txt
warning: `/Users/max/.cargo/config` is deprecated in favor of `config.toml`
note: if you need to support cargo 1.38 or earlier, you can symlink `config` to `config.toml`
    Checking graphchan_frontend v0.1.0 (/Users/max/Code/OrbWeaver/graphchan_frontend)
warning: variable `post_ids` is assigned to, but never used
  --> graphchan_frontend/src/app/messages.rs:66:25
   |
66 |                 let mut post_ids = Vec::new();
   |                         ^^^^^^^^
   |
   = note: consider using `_post_ids` instead
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: value assigned to `post_ids` is never read
  --> graphchan_frontend/src/app/messages.rs:72:33
   |
72 | ...                   post_ids = details.posts.iter().map(|p| p.id.clone()).collect();
   |                       ^^^^^^^^
   |
   = help: maybe it is overwritten before being read?
   = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

error[E0499]: cannot borrow `*app` as mutable more than once at a time
   --> graphchan_frontend/src/app/messages.rs:107:57
    |
 67 |                 if let ViewState::Thread(state) = &mut app.view {
    |                                                   ------------- first mutable borrow occurs here
...
100 |                                             state.attachments.insert(post.id.clone(), post.files.clone());
    |                                             ----------------- first borrow later used here
...
107 |                                                         app.spawn_load_image(&file.id, &url);
    |                                                         ^^^ second mutable borrow occurs here

warning: unused variable: `scale`
  --> graphchan_frontend/src/app/ui/graph.rs:77:82
   |
77 | fn step_graph_layout(nodes: &mut HashMap<String, GraphNode>, posts: &[PostView], scale: f32, thread_id: &str, repulsion_force: f32) {
   |                                                                                  ^^^^^
   |
help: if this is intentional, prefix it with an underscore
   |
77 | fn step_graph_layout(nodes: &mut HashMap<String, GraphNode>, posts: &[PostView], _scale: f32, thread_id: &str, repulsion_force: f32) {
   |                                                                                  +
help: you might have meant to pattern match on the similarly named constant `TOP_MARGIN`
   |
77 - fn step_graph_layout(nodes: &mut HashMap<String, GraphNode>, posts: &[PostView], scale: f32, thread_id: &str, repulsion_force: f32) {
77 + fn step_graph_layout(nodes: &mut HashMap<String, GraphNode>, posts: &[PostView], app::ui::chronological::TOP_MARGIN: f32, thread_id: &str, repulsion_force: f32) {
   |

warning: unused variable: `state`
   --> graphchan_frontend/src/app/ui/graph.rs:520:42
    |
520 | fn render_node_header(ui: &mut egui::Ui, state: &mut ThreadState, post: &PostView, zoom: f32) {
    |                                          ^^^^^ help: if this is intentional, prefix it with an underscore: `_state`

warning: unused variable: `thread_id`
   --> graphchan_frontend/src/app/ui/thread.rs:149:17
    |
149 |             let thread_id = state.summary.id.clone();
    |                 ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_thread_id`

warning: unused variable: `attachments`
   --> graphchan_frontend/src/app/ui/thread.rs:150:17
    |
150 |             let attachments = &state.attachments;
    |                 ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_attachments`

warning: unused variable: `attachments_loading`
   --> graphchan_frontend/src/app/ui/thread.rs:151:17
    |
151 |             let attachments_loading = &state.attachments_loading;
    |                 ^^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_attachments_loading`

warning: unused variable: `attachments_errors`
   --> graphchan_frontend/src/app/ui/thread.rs:152:17
    |
152 |             let attachments_errors = &state.attachments_errors;
    |                 ^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_attachments_errors`

warning: unused variable: `go_back`
   --> graphchan_frontend/src/app/mod.rs:320:17
    |
320 |         let mut go_back = false;
    |                 ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_go_back`

warning: variable does not need to be mutable
   --> graphchan_frontend/src/app/mod.rs:320:13
    |
320 |         let mut go_back = false;
    |             ----^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0499`.
warning: `graphchan_frontend` (lib) generated 10 warnings
error: could not compile `graphchan_frontend` (lib) due to 1 previous error; 10 warnings emitted
